# cookiecutter-pythonic-bigdata

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: main.yml
changelog/: index.html
docs/: changelog.md  index.md  usage.md
hooks/: post_gen_project.py
search/: search_index.json
tests/: conftest.py  test_bake.py
usage/: index.html
{{ cookiecutter.project_slug }}/: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: main.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: cmdline.py  constants.py  context.py  executor.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/config/: settings.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/configs/: __init__.py  dev.toml  global.toml  settings.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/dependencies/: config.py  logger.py  spark.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/tasks/abstract/: task.py  transform.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/utils/: singleton.py
{{ cookiecutter.project_slug }}/tests/: test_version.py
