[tool.poetry]
name = "cookiecutter-pythonic-project-bigdata-etl"
version = "0.1.0"
description = "cookiecutter for pythonic bigdata project"
authors = ["RJY"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cookies = "^0.6.1"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
