[tool.poetry]
name = "cookiecutter-pythonic-project-bigdata-etl"
version = "0.1.0"
description = "cookiecutter for pythonic bigdata project"
authors = ["RJY"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cookies = "^0.6.1"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
