[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"
stevedore = "^4.0.0"
dynaconf = "^3.1.9"
click = "^8.1.3"
{%- if cookiecutter.use_framework|lower == 'pyspark' %}
pyspark = "^3.3.0"
{%- endif %}

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.plugins.console_scripts]
'{{ cookiecutter.project_slug }}' = "{{ cookiecutter.project_slug }}.cmdline:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
